fix share button alignment

--- a/assets/css/component/breadcrumb.css
+++ b/assets/css/component/breadcrumb.css
@@ -47,6 +47,7 @@ header menu a,
 #share {
     display: flex;
     align-items: center;
+    justify-content: center;
     border: none;
     border-radius: 2em;
     background: var(--fg);
